<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@+id/pokemonDetailsContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/dataContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/avatarImageView"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/cd_pokemon_list_image"
                android:scaleType="centerInside"
                android:src="@drawable/pic_pokeball_disabled" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/avatarImageView"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/weightTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/primary_text_light"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/titleWeightTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/weight_title"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/baseExperienceContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/avatarImageView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/baseExperienceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/primary_text_light"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/titleBaseExperienceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/base_experience_title"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/avatarImageView"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/heightTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/primary_text_light"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/titleHeightTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/height_title"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/baseExperienceContainer"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/titleAbilitiesTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abilities_title"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/abilitiesTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@android:color/primary_text_light"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</FrameLayout>